real life example of stack